kube/demo/whoami/network.yml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: demo
  labels:
    app.kubernetes.io/name: whoami
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app.kubernetes.io/name: whoami
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  namespace: demo
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
  labels:
    app.kubernetes.io/name: whoami
spec:
  ingressClassName: nginx-internal
  tls:
  - hosts:
    - whoami.matthew-stratton.me
    secretName: whoami-tls
  rules:
  - host: whoami.matthew-stratton.me
    http:
      paths:
      - backend:
          service:
            name: whoami
            port:
              number: 80
        path: /
        pathType: Prefix
